package com.microservices.user.service;

import com.microservices.user.dto.UserDto;
import com.microservices.user.exception.ResourceNotFoundException;
import com.microservices.user.model.User;
import com.microservices.user.repository.UserRepository;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

import java.util.List;

/**
 * Service m√©tier User
 * Utilis√© par REST Controller et gRPC Service
 */
@Service
@RequiredArgsConstructor
@Slf4j
@Transactional
public class UserService {

    private final UserRepository userRepository;

    /**
     * R√©cup√©rer tous les utilisateurs
     */
    @Transactional(readOnly = true)
    public List<User> findAll() {
        log.info("üìã R√©cup√©ration de tous les utilisateurs");
        return userRepository.findAll();
    }

    /**
     * R√©cup√©rer un utilisateur par ID
     */
    @Transactional(readOnly = true)
    public User findById(Long id) {
        log.info("üîç Recherche utilisateur ID: {}", id);
        return userRepository.findById(id)
                .orElseThrow(() -> new ResourceNotFoundException("User", id));
    }

    /**
     * R√©cup√©rer un utilisateur par username
     */
    @Transactional(readOnly = true)
    public User findByUsername(String username) {
        log.info("üîç Recherche utilisateur username: {}", username);
        return userRepository.findByUsername(username)
                .orElseThrow(() -> new ResourceNotFoundException("User non trouv√©: " + username));
    }

    /**
     * Cr√©er un utilisateur
     */
    public User create(UserDto.CreateRequest request) {
        log.info("‚ûï Cr√©ation utilisateur: {}", request.getUsername());
        
        // V√©rifier unicit√© username
        if (userRepository.existsByUsername(request.getUsername())) {
            throw new IllegalArgumentException("Username d√©j√† utilis√©: " + request.getUsername());
        }
        
        // V√©rifier unicit√© email
        if (userRepository.existsByEmail(request.getEmail())) {
            throw new IllegalArgumentException("Email d√©j√† utilis√©: " + request.getEmail());
        }

        User user = User.builder()
                .username(request.getUsername())
                .email(request.getEmail())
                .firstName(request.getFirstName())
                .lastName(request.getLastName())
                .password(request.getPassword()) // En prod: encoder le mot de passe!
                .active(true)
                .build();

        User saved = userRepository.save(user);
        log.info("‚úÖ Utilisateur cr√©√©: {} (ID: {})", saved.getUsername(), saved.getId());
        return saved;
    }

    /**
     * Mettre √† jour un utilisateur
     */
    public User update(Long id, UserDto.UpdateRequest request) {
        log.info("‚úèÔ∏è Mise √† jour utilisateur ID: {}", id);
        
        User user = findById(id);

        if (request.getEmail() != null && !request.getEmail().equals(user.getEmail())) {
            if (userRepository.existsByEmail(request.getEmail())) {
                throw new IllegalArgumentException("Email d√©j√† utilis√©");
            }
            user.setEmail(request.getEmail());
        }

        if (request.getFirstName() != null) {
            user.setFirstName(request.getFirstName());
        }

        if (request.getLastName() != null) {
            user.setLastName(request.getLastName());
        }

        if (request.getActive() != null) {
            user.setActive(request.getActive());
        }

        User updated = userRepository.save(user);
        log.info("‚úÖ Utilisateur mis √† jour: {}", updated.getUsername());
        return updated;
    }

    /**
     * Supprimer un utilisateur
     */
    public void delete(Long id) {
        log.info("üóëÔ∏è Suppression utilisateur ID: {}", id);
        
        User user = findById(id);
        userRepository.delete(user);
        log.info("‚úÖ Utilisateur supprim√©: {}", user.getUsername());
    }

    /**
     * Compter les utilisateurs
     */
    @Transactional(readOnly = true)
    public long count() {
        return userRepository.count();
    }

    /**
     * V√©rifier si un utilisateur existe
     */
    @Transactional(readOnly = true)
    public boolean existsById(Long id) {
        return userRepository.existsById(id);
    }

    /**
     * Convertir User en Response DTO
     */
    public UserDto.Response toResponse(User user) {
        return UserDto.Response.builder()
                .id(user.getId())
                .username(user.getUsername())
                .email(user.getEmail())
                .firstName(user.getFirstName())
                .lastName(user.getLastName())
                .active(user.isActive())
                .createdAt(user.getCreatedAt())
                .build();
    }
}
